--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   <style>
     html,
     body {
-      height: 100%;
       margin: 0;
       font-family: Bebas-Regular, sans-serif;
+      overflow: hidden;
+    }
+
+    #root-container {
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
     }
   </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root-container"></div>
 
   <script src="/src/index.tsx" type="module"></script>
 </body>
