--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       overflow: hidden;
     }
 
-    #root-container {
+    #app-container {
       width: 100vw;
       height: 100vh;
       overflow: hidden;
@@ -25,7 +25,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root-container"></div>
+  <div id="app-container"></div>
 
   <script src="/src/index.tsx" type="module"></script>
 </body>
